[package]
name = "ldm_commons"
version = "0.1.0"
authors = ["Ahmet Reha SEKER <ahmetrehaseker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simplelog = "0.7.5"
toml = "0.5.6"
serde = "1.0.106"
serde_derive = "1.0.106"
dirs = "2.0.2"