[package]
name = "ldm_metrics"
version = "0.1.0"
authors = ["Ahmet Reha SEKER <ahmetrehaseker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ldm_commons = { path = "../ldm_commons" }
serde = "1.0.106"
serde_derive = "1.0.106"
systemstat = "0.1.5"
log = "0.4"
log4rs = "0.12.0"
clokwerk = "0.3.0"