[package]
name = "opsgenie-rs"
version = "0.1.0"
authors = ["Ahmet Reha SEKER <ahmetrehaseker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
serde_json = "1.0"
serde = "1.0.106"
serde_derive = "1.0.106"